@@ -2,17 +2,17 @@
 
 // Dead loads disabled until we have notUsed() for flags.
 
-//replace restart {
-//	ld	%1, %2
-//} by {
-//	; peephole 0 removed dead load.
-//} if notVolatile(%1), notVolatile(%2), notUsed(%1)
+replace restart {
+	ld	%1, %2
+} by {
+	; peephole 0 removed dead load from %2 to %1.
+} if notVolatile(%1), notVolatile(%2), notUsed(%1), notUsed('n'), notUsed('z')
 
-//replace restart {
-//	ldw	%1, %2
-//} by {
-//	; peephole 0w removed dead load.
-//} if notVolatile(%1), notVolatile(%2), notUsed(%1)
+replace restart {
+	ldw	%1, %2
+} by {
+	; peephole 0w removed dead load from %2 to %1.
+} if notVolatile(%1), notVolatile(%2), notUsed(%1), notUsed('n'), notUsed('z')
 
 replace restart {
 	ld	%1, %2
